force-app/main/default/objects/Student__c/fields/Default_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Hourly_Rate__c</fullName>
    <label>Default Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>