force-app/main/default/objects/Student__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Sınıf</fullName>
            </value>
            <value>
                <fullName>2. Sınıf</fullName>
            </value>
            <value>
                <fullName>3. Sınıf</fullName>
            </value>
            <value>
                <fullName>4. Sınıf</fullName>
            </value>
            <value>
                <fullName>5. Sınıf</fullName>
            </value>
            <value>
                <fullName>6. Sınıf</fullName>
            </value>
            <value>
                <fullName>7. Sınıf</fullName>
            </value>
            <value>
                <fullName>8. Sınıf</fullName>
            </value>
            <value>
                <fullName>9. Sınıf</fullName>
            </value>
            <value>
                <fullName>10. Sınıf</fullName>
            </value>
            <value>
                <fullName>11. Sınıf</fullName>
            </value>
            <value>
                <fullName>12. Sınıf</fullName>
            </value>
            <value>
                <fullName>Mezun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>