force-app/main/default/objects/Student__c/fields/School_Exam_1_2__c.field-meta.xml
<CustomField>
    <fullName>School_Exam_1_2__c</fullName>
    <label>1. Dönem 2. Sınav</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>