force-app/main/default/objects/Student__c/fields/School_Exam_2_1__c.field-meta.xml
<CustomField>
    <fullName>School_Exam_2_1__c</fullName>
    <label>2. Dönem 1. Sınav</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>