force-app/main/default/objects/Student__c/fields/Student_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Type__c</fullName>
    <label>Öğrenci Tipi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TYT/AYT Hazırlık</fullName>
            </value>
            <value>
                <fullName>LGS Hazırlık</fullName>
            </value>
            <value>
                <fullName>Ara Sınıf</fullName>
            </value>
            <value>
                <fullName>Koçluk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>