force-app/main/default/objects/Student__c/fields/Target_Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Exam_Date__c</fullName>
    <label>Hedef Sınav Tarihi</label>
    <type>Date</type>
</CustomField>