force-app/main/default/objects/Student__c/fields/Token_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiration__c</fullName>
    <label>Token Expiration</label>
    <type>DateTime</type>
</CustomField>