force-app/main/default/objects/Student__c/fields/Total_Lesson_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Lesson_Fee__c</fullName>
    <label>Total Lesson Fee</label>
    <summarizedField>Lesson__c.Total_Fee__c</summarizedField>
    <summaryForeignKey>Lesson__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>