force-app/main/default/objects/Student__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Username</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>